[gd_scene load_steps=3 format=3 uid="uid://ccrgoofit65y2"]

[ext_resource type="Script" path="res://ui/options.gd" id="1"]
[ext_resource type="Script" path="res://pieces/centred_label.gd" id="2"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="list" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="master_label" type="RichTextLabel" parent="list"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Master volume[/center]"
fit_content = true
script = ExtResource("2")
base_text = "Master volume"

[node name="master_slider" type="HSlider" parent="list"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="music_label" type="RichTextLabel" parent="list"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Music volume[/center]"
fit_content = true
script = ExtResource("2")
base_text = "Music volume"

[node name="music_slider" type="HSlider" parent="list"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="sfx_label" type="RichTextLabel" parent="list"]
layout_mode = 2
bbcode_enabled = true
text = "[center]SFX volume[/center]"
fit_content = true
script = ExtResource("2")
base_text = "SFX volume"

[node name="sfx_slider" type="HSlider" parent="list"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="divider" type="HSeparator" parent="list"]
layout_mode = 2

[node name="fullscreen_button" type="CheckBox" parent="list"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"

[connection signal="value_changed" from="list/master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="list/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="list/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="list/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
